--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
@@ -32,20 +32,20 @@ guest **读写**该位反映在**真实的寄存器**上，**不会产生 VM-exi
 
 举个例子来说明位的 host 与 guest 权利。
 
-假如 `CR4 guest/host mask` 为 000021H 值，`CR4 read shadow` 为 000000H 值，而 CR4 寄存器的值为 0000220H。
+假如 `CR4 guest/host mask` 为 00002021H 值，`CR4 read shadow` 为 00002020H 值，而 CR4 寄存器的值为 00002220H。
 
 此时，CR4 寄存器的 bit0, bit5 以及 bit13 属于 **host 权利**，其余位则 **guest 有权利**。
 
 ```
-mov eax. cr4        ; 返回 0000220h
+mov eax. cr4        ; 返回 00002220h
 mov eax, 2024h      ; bit 2 =1
 mov cr4, eax        ; cr4 被写入 00002024h 值
 mov eax, 2021h
 mov cr4, eax        ; 失败，产生 WM-exit
 ```
 
-当读 CR4 寄存器时，将返回 000020h 值。返回值的 bit0, bit5 及 bit13 来自 read  shadow 字段对应的 bit0, bit5 及 bit3, 而 bit9 则来自 CR4 寄存器的 bit 9.
+当**读** CR4 寄存器时，将返回 00002220h 值。返回值的 bit0, bit5 及 bit13 来自 **read  shadow** 字段对应的 bit0, bit5 及 bit3, 而 bit9 则来自 **CR4 寄存器**的 bit 9.
 
-当向 CR4 寄存器写入 00004h 值时，由于 bit2 属于 guest 有权利，所以 bit2 值能写入 CR4 寄存器。并且 bit0, bit5 及 bit13 的值等于 read shadow 字段对应位的值，所以这个写入是成功的。
+当向 CR4 寄存器**写**入 00002024h 值时，由于 **bit2** 属于 **guest** 有权利，所以 bit2 值能写入 **CR4 寄存器**, 并且 bit0, bit5 及 bit13 的值**等于 read shadow 字段**对应位的值，所以这个写入是成功的。
 
-当向 CR4 寄存器写入 00002021h 值时，由于 bit0 属于 host 权利，并且写入值的 bit0 不等于 read shadow 字段的 bit0 值，因此，这个写入失败将产生 VM-exit, CR4 寄存器的值不变。
+当向 CR4 寄存器**写**入 00002021h 值时，由于 **bit0** 属于 **host** 权利，并且写入值的 bit0 **不等于** read shadow 字段的 bit0 值，因此，这个写入失败将产生 `VM-exit`, CR4 寄存器的值不变。
