--- Auto-Git Commit ---

--- a/Vim/1. 入门基础.md
+++ b/Vim/1. 入门基础.md
@@ -48,6 +48,7 @@
     - [6.1.3. 配置项资料](#613-配置项资料)
 - [7. Vim插件](#7-vim插件)
 - [8. Vim完整文档](#8-vim完整文档)
+- [Vim使用](#vim使用)
 - [9. 参考](#9-参考)
 
 <!-- /code_chunk_output -->
@@ -924,6 +925,20 @@ Vim官方文档：http://vimdoc.sourceforge.net/
 Vim中文用户手册7_3.pdf ：http://pan.baidu.com/s/1jGzbTBo
 
 在线帮助：在VIM中调用命令:help或者:help Commands或者:help options
+
+# Vim使用
+
+1. 要知道它是支持插件，绝大部分插件在github。什么插件都不装的vim是很简陋的。
+2. 第一个插件是插件管理器：vim-plug
+3. 折腾vim的过程就是折腾配置插件的过程
+
+上面三步是基本的
+
+4. 很多插件用得不爽，所以学习写插件。
+5. vim本身用得不爽，遇到bug，学习c语言给vim的源码提交patch改善。
+6. 实在不爽，自己造一个轮子，写一个更好编辑器。
+
+这才是一个黑客应该具有的素质：用得不爽就自己创造。
 
 # 9. 参考
 
