--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/ebpf/1. eBPF 简史.md
+++ b/Linux/Debug/debug/tools/ebpf/1. eBPF 简史.md
@@ -11,16 +11,17 @@
 
 ## 什么是 BPF?
 
-笔者在前文中说过了，BPF 的全称是 Berkeley Packet Filter，顾名思义，这是一个用于**过滤(filter)网络报文(packet)的架构**。
+笔者在前文中说过了，BPF 的全称是 `Berkeley Packet Filter`，顾名思义，这是一个用于**过滤(filter)网络报文(packet)的架构**。
 
 其实 BPF 可谓是名气不大，作用不小的典范：如果笔者一开始提出 BPF 的同时还捎带上大名鼎鼎的 **tcpdump** 或 **wireshark**，估计绝大部分读者都会了然了：BPF 即为 tcpdump 抑或 wireshark 乃至**网络监控(Network Monitoring)领域**的基石。
 
-今天我们看到的 BPF 的设计，最早可以追溯到 1992 年刊行在 USENIX conference 上的一篇论文：The BSD Packet Filter: A New Architecture for User-level Packet Capture。由于最初版本的 BPF 是实现于 BSD 系统之上的，于是在论文中作者称之为"BSD Packet Filter"；后来由于 BPF 的理念渐成主流，为各大操作系统所接受，B 所代表的 BSD 便也渐渐淡去，最终演化成了今天我们眼中的 Berkeley Packet Filter。
+今天我们看到的 BPF 的设计，最早可以追溯到 **1992** 年刊行在 USENIX conference 上的一篇论文：`The BSD Packet Filter: A New Architecture for User-level Packet Capture`。由于最初版本的 BPF 是实现于 **BSD 系统**之上的，于是在论文中作者称之为"`BSD Packet Filter`"；后来由于 BPF 的理念渐成主流，为各大操作系统所接受，B 所代表的 BSD 便也渐渐淡去，最终演化成了今天我们眼中的 `Berkeley Packet Filter`。
 
 诚然，无论 BSD 和 Berkeley 如何变换，其后的 Packet Filter 总是不变的，这两个单词也基本概括了 BPF 的两大核心功能：
 
-过滤(Filter): 根据外界输入的规则过滤报文；
-复制(Copy)：将符合条件的报文由内核空间复制到用户空间；
+* 过滤(Filter): 根据外界输入的规则**过滤报文**；
+* 复制(Copy): 将符合条件的报文由内核空间复制到用户空间；
+
 以 tcpdump 为例：熟悉网络监控(network monitoring)的读者大抵都知道 tcpdump 依赖于 pcap 库，tcpdump 中的诸多核心功能都经由后者实现，其整体工作流程如下图所示：
 
 图 1. Tcpdump 工作流程
