--- a/Virtualization/3. KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/5. VM-exit.md
@@ -27,6 +27,9 @@ for (;;) {
 
 # VM-EXIT事件
 
+`arch/x86/include/uapi/asm/svm.h`
+
+
 触发虚机退出的事件有很多，罗列如下：
 
 `FAILED_VMENTRY、EXCEPTION_NMI、EXTERNAL_INTERRUPT、TRIPLE_FAULT、PENDING_INTERRUPT、NMI_WINDOW、TASK_SWITCH、CPUID、HLT、INVD、INVLPG、RDPMC、RDTSC、VMCALL、VMCLEAR、VMLAUNCH、VMPTRLD、VMPTRST、VMREAD、VMRESUME、VMWRITE、VMOFF、VMON、CR_ACCESS、DR_ACCESS、IO_INSTRUCTION、MSR_READ、MSR_WRITE、INVALID_STATE、MSR_LOAD_FAIL、MWAIT_INSTRUCTION、MONITOR_TRAP_FLAG、MONITOR_INSTRUCTION、PAUSE_INSTRUCTION、MCE_DURING_VMENTRY、TPR_BELOW_THRESHOLD、APIC_ACCESS、EOI_INDUCED、GDTR_IDTR、LDTR_TR、EPT_VIOLATION、EPT_MISCONFIG、INVEPT、RDTSCP、PREEMPTION_TIMER、INVVPID、WBINVD、XSETBV、APIC_WRITE、INVPCID、PML_FULL、XSAVES、XRSTORS`
