--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -738,7 +738,7 @@ static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
 
 ## 5.3. apic_timer_expired(): apic timer已经到期处理
 
-无论hvtimer(preemption timer)还是sw timer, 都可能会调用到
+无论`hvtimer(preemption timer)`还是`sw timer`, 都可能会调用到
 
 ```cpp
 static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
