--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -10,7 +10,7 @@
   - [2.1. 异常处理的原则](#21-异常处理的原则)
   - [2.2. Guest自身处理](#22-guest自身处理)
   - [2.3. VMM修复异常](#23-vmm修复异常)
-  - [2.4. 特例: task-switch](#24-特例-task-switch)
+  - [2.4. 特例: legacy模式的task-switch](#24-特例-legacy模式的task-switch)
 
 <!-- /code_chunk_output -->
 
@@ -46,6 +46,8 @@
 
 又如，在**异常delivery期间**由于`EPT misconfiguration`而导致`VM-exit`时，VMM应该**修复这个故障**，然后**注人这个原始异常事件**(并**不是直接引发**`VM-exit`的异常, 而是**正在delivery的异常**)让guest恢复继续执行(即这个异常间接导致VM-exit, 让继续进行异常处理delivery).
 
-## 2.4. 特例: task-switch
+## 2.4. 特例: legacy模式的task-switch
 
-然而有一个特殊的例子，在**VMX non root operation**模式里尝试进行**任务切换**将**直接**产生`VM-exit`。当guest运行在 **legacy** 模式时，并不是guest的错误，也不是VMM本身的错误。因此，VMM必须要帮助guest来完成这个任务切换操作(参考7.1.3节例子7-2)。
+然而有一个特殊的例子，在**VMX non root operation**模式里尝试进行**任务切换**将**直接**产生`VM-exit`。
+
+当**guest**运行在 **legacy** 模式时，并不是guest的错误，也不是VMM本身的错误。因此，VMM必须要帮助guest来完成这个任务切换操作(参考7.1.3节例子7-2)。
