--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -1,5 +1,7 @@
 
 
+也就是将中断注入给虚拟机???
+
 # 两个字段: info和error code
 
 由于异常而引发`VM-exit`时，
@@ -12,15 +14,15 @@
 
 # 1. 处理NMI unblocking位
 
-`VM-entry interruption information`字段的`bits 30:12`属于**保留位**，在注入事件时必须清为0值。
+`VM-entry interruption information`字段的`bits 30:12`属于**保留位**，在**注入事件时**必须清为0值。
 
-然而，`VM-exit interruption information` 字段的`bit 12`为"`NMI unbocking`" 位。当这个异常是在执行**IRET指令**时引发并导致`VM-exit`, `VM-exit interruption information`字段的`bit 12`被置位。此时，VMM需要将复制到`VM entry ineruption informatin` 字段的`bit 12`清0, 否则将会产生`VM-entry`失败。
+然而，`VM-exit interruption information` 字段的`bit 12`为"`NMI unblocking`" 位。当这个异常是在执行**IRET指令**时引发并导致`VM-exit`, `VM-exit interruption information`字段的`bit 12`**被置位**。此时，VMM需要将复制到`VM entry ineruption informatin` 字段的`bit 12`清0, 否则将会产生`VM-entry`失败。
 
-因此，每次**反射异常给guest**时，VMM需要检查`VM-exit interruption information` 字段的`bit 12`, 做出相应的处理。
+因此，每次**反射异常给guest** 时，VMM需要检查`VM-exit interruption information` 字段的`bit 12`, 做出相应的处理。
 
 # 2. 反射`#DF`异常
 
-当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**. 而是由于在**异常delivery 期间**遇到某些错误而导致`VM-exit`(参见3.10.3节). 
+当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**, 而是由于在**异常delivery 期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
 那么 `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, `IDT-vectoring error code`字段记录**原始异常的错误码**.
 
