--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -44,7 +44,9 @@
 
 ## 2.3. VMM修复异常
 
-又如，在**异常delivery期间**由于`EPT misconfiguration`而导致`VM-exit`时，VMM应该**修复这个故障**，然后**注人这个原始异常事件**(并**不是直接引发**`VM-exit`的异常, 而是**正在delivery的异常**)让guest恢复继续执行(即这个异常间接导致VM-exit, 让继续进行异常处理delivery).
+又如，在**异常A delivery期间**由于`EPT misconfiguration`而导致`VM-exit`时，VMM应该**修复这个故障**，然后**注人这个原始异常事件**(并**不是直接引发**`VM-exit`的异常`EPT misconfiguration`, 而是**正在delivery的异常A**)让guest恢复继续执行
+
+(即处理这个间接导致VM-exit的`EPT misconfiguration`异常, 然后注入异常A让继续进行异常处理delivery).
 
 ## 2.4. 特例: legacy模式的task-switch
 
