--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -22,15 +22,39 @@
 
 # 2. 反射`#DF`异常
 
-当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**, 而是由于在**异常delivery 期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
+当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
-那么 `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, `IDT-vectoring error code`字段记录**原始异常的错误码**.
+那么:
+* `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, 
+* `IDT-vectoring error code`字段记录**原始异常的错误码**.
 
-在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常给guest.
+在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常**给guest**.
 
 ![2020-08-02-20-57-33.png](./images/2020-08-02-20-57-33.png)
 
+当 guest 在执行过程中引发了表 7-1 中 IDT- vectoring information 字段所记录的异常，或者注入了表中 IDT- vectoring information 字段所记录的硬件异常（中断类型为硬件异常），但这个异常并不直接导致 VM-exit，而在 delivery 期间遇到了表 7-1 中 VM-exit  interruption information 字段所记录的嵌套异常而导致 Vm-exit（另外参见 4.12.2 节）
 
+也就是下面两类情况，#DF 异常最终会被产生。
+
+第 1 类情况：
+
+・遇到的异常（或者注入的硬件异常）是 DE（向量号 0)、#S（向量号 10) NP（向量号 11)、#SS（向量号 12) 或者#GP（向量号 13) 之
+
+・异常 delivery 期间遇到了#DE（向量号 0)、#打 S（向量号 10)、#NP（向量号 11)、#SS（向量号 12) 或者#GP（向量号 13) 之
+
+第 2 类情况：
+
+遇到的异常（或者注入的硬件异常）是 PF（向量号 14)。
+
+・异常 delivery 期间遇到了排 PF（向量号 14)、#DE（向量号 0)、#S（向量号
+
+10)、NP（向量号 11)、#S（向量号 12) 或者#GP（向量号 13) 之
+
+属于上面两类情况时，在正常情况下这两个异常会转化为一个 DF 异常  fault，双重故障）。但由于嵌套异常 delivery 期间引发的异常直接引发了 Vm-exit，为了模拟 guest 产生的 DF 异常，VMM 需要注入一个硬件异常 DF 给 guest，而不是嵌套异常。
+
+举例来说，guest 在执行中产生了#SS 异常，但这个#S 异常并不引发 Vm-exit，继而
+
+在这个#SS 异常的 delivery 期间遇到了一个#GP 异常而导致 VM-exit。此时 VMM 需要反
 ......
 
 # 3. 处理 triple fault
