--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -32,7 +32,7 @@
 
 ![2020-08-02-20-57-33.png](./images/2020-08-02-20-57-33.png)
 
-当 guest 在执行过程中引发了表 7-1 中 IDT- vectoring information 字段所记录的异常，或者注入了表中 IDT- vectoring information 字段所记录的硬件异常（中断类型为硬件异常），但这个异常并不直接导致 VM-exit，而在 delivery 期间遇到了表 7-1 中 VM-exit  interruption information 字段所记录的嵌套异常而导致 Vm-exit（另外参见 4.12.2 节）
+当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 IDT-vectoring information 字段所记录的硬件异常（中断类型为硬件异常），但这个异常并不直接导致 VM-exit，而在 delivery 期间遇到了表 7-1 中 VM-exit  interruption information 字段所记录的嵌套异常而导致 Vm-exit（另外参见 4.12.2 节）
 
 也就是下面两类情况，#DF 异常最终会被产生。
 
