--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -32,15 +32,15 @@
 
 ![2020-08-02-20-57-33.png](./images/2020-08-02-20-57-33.png)
 
-当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 IDT-vectoring information 字段所记录的硬件异常（中断类型为硬件异常），但这个异常并不直接导致 VM-exit，而在 delivery 期间遇到了表 7-1 中 VM-exit  interruption information 字段所记录的嵌套异常而导致 Vm-exit（另外参见 4.12.2 节）
+当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 `IDT-vectoring information` 字段所记录的**硬件异常**（**中断类型为硬件异常**），但这个异常**并不直接导致** `VM-exit`，而在 **delivery 期间**遇到了表 7-1 中 `VM-exit  interruption information` 字段所记录的**嵌套异常**而导致 `Vm-exit`（另外参见 4.12.2 节）
 
-也就是下面两类情况，#DF 异常最终会被产生。
+也就是下面两类情况，`#DF` 异常最终会被产生。
 
 第 1 类情况：
 
-・遇到的异常（或者注入的硬件异常）是 DE（向量号 0)、#S（向量号 10) NP（向量号 11)、#SS（向量号 12) 或者#GP（向量号 13) 之
+* 遇到的异常（或者注入的硬件异常）是 `#DE`（向量号 0)、#S（向量号 10) NP（向量号 11)、#SS（向量号 12) 或者#GP（向量号 13) 之
 
-・异常 delivery 期间遇到了#DE（向量号 0)、#打 S（向量号 10)、#NP（向量号 11)、#SS（向量号 12) 或者#GP（向量号 13) 之
+* 异常 delivery 期间遇到了#DE（向量号 0)、#打 S（向量号 10)、#NP（向量号 11)、#SS（向量号 12) 或者#GP（向量号 13) 之
 
 第 2 类情况：
 
