--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -46,11 +46,45 @@
 * 遇到的异常（或者注入的硬件异常）是 `#PF`（向量号 14)。
 * 异常 delivery 期间遇到了 `#PF`（向量号 14)、`#DE`（向量号 0)、`#TS`（向量号 10)、`#NP`（向量号 11)、`#SS`（向量号 12) 或者`#GP`（向量号 13) 之一
 
-属于上面两类情况时，在正常情况下**这两个异常**会转化为一个 `#DF` 异常 (double fault，双重故障)。但由于嵌套异常 delivery 期间引发的异常直接引发了 Vm-exit，为了模拟 guest 产生的 `#DF` 异常，VMM 需要注入一个硬件异常 DF 给 guest，而不是嵌套异常。
+属于上面两类情况时，在正常情况下**这两个异常**会转化为一个 `#DF` 异常 (double fault，双重故障)。但由于**嵌套异常 delivery 期间**引发的**异常**直接引发了 `VM-exit`，为了模拟 guest 产生的 `#DF` 异常，VMM 需要**注入一个硬件异常 DF 给 guest**，而**不是嵌套异常**。
 
-举例来说，guest 在执行中产生了#SS 异常，但这个#S 异常并不引发 Vm-exit，继而
+举例来说，guest 在执行中产生了`#SS` 异常，但这个`#SS` 异常**并不引发 VM-exit**，继而在这个`#SS` 异常的 **delivery 期间**遇到了一个`#GP` 异常而导致 **VM-exit**。此时 VMM 需要反射一个`#DF` 异常给 guest 处理，而**不是**`#GP` 异常。
 
-在这个#SS 异常的 delivery 期间遇到了一个#GP 异常而导致 VM-exit。此时 VMM 需要反
+VMM 注入 DF 异常时，VM- entry interruption information 字段设置为：
+
+Bis7:0（向量号）为 8, 指示 DF 异常
+
+Bits10:8（中断类型）为 3, 指示属于硬件异常
+
+ Bit 1I (error code）为 1, 指示需要提供错误码
+
+Bit3 (valid）为 1, 指示这个字段有效
+
+Bits32:12（保留位）清为 0
+
+VM- entry interruption error code 字段值设置为 0, 指示错误码为 0 值。
+
+另一情况是：guest 遇到异常但并不导致 VM-exit，继而在这个异常 delivery 期间引发了另一个嵌套异常，这个嵌套异常也不导致 Vm-exit。从而这两个异常被转化为#DF 异常，由于 exception bitmap 字段的 bit8 为 1 而导致 VM-exit
+
+此时，VM- exit interruption information 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM- exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 DF 让 guest 处
+
+3. 处理 triple fault
+
+下面的三种情况会产生 triple fault（异常属于前面所说的第 1 类或者第 2 类情况）:
+
+ (1) 当 guest 遇到异常但并不导致 VM-exit，继而在这个异常 delivery 期间引发了另异常，这个异常也不导致 Vm-exit，从而这两个异常被转化为 DF 异常。#DF 异常也不导致 VM-exit，继而在#DF 异常的 delivery 期间再次引发了一个异常，最终转化为 triple  fault 而导致 VM-exit
+
+ (2) VMM 注入一个硬件异常，在这个注入异常的 delivery 期间引发了一个异常，这个异常并不导致 VMexit，从而转化为#DF 异常。#DF 异常也不导致 VM-exi，继而在 #DF 异常的 delivery 期间再次引发了一个异常，最终转化为 triple fault 而导致 VM-exit
+
+ (3) VMM 注入一个硬件异常#DF，在这个注入的 DF 异常 delivery 期间引发了一个异常，最终转化为 triple fault 而导致 VMexit
+
+由 triple fault 直接引发 MM-exit 时，VMM 不应该注入任何事件给 guest 执行。VMM 可以选择终止 guest 的运行，或者将 M 置为 shutdown 状态。当 VM 处于 shutdown 状态时，NMI、SMI 及 INT 事件能唤醒 shutdown 状态转为 active 状态（参见 4.173 节）
+
+4. 直接反射异常
+
+当异常由 guest 自身条件所引发时，在下面的情况下 VMM 可以直接反射异常给  guest 处理。
+
+ (1) 由异常直接导致 Vm-exit 时，也就是 Idt-vectoring information 字段 bit31 为 0。
 ......
 
 # 3. 处理 triple fault
