--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -20,7 +20,7 @@
 
 因此，每次**反射异常给guest** 时，VMM需要检查`VM-exit interruption information` 字段的`bit 12`, 做出相应的处理。
 
-# 2. 反射`#DF`异常
+# 2. 反射`#DF`异常: 异常嵌套
 
 当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
@@ -46,15 +46,15 @@
 * 遇到的异常（或者注入的硬件异常）是 `#PF`（向量号 14)。
 * 异常 delivery 期间遇到了 `#PF`（向量号 14)、`#DE`（向量号 0)、`#TS`（向量号 10)、`#NP`（向量号 11)、`#SS`（向量号 12) 或者`#GP`（向量号 13) 之一
 
-属于上面两类情况时，在正常情况下**这两个异常**会转化为一个 `#DF` 异常 (double fault，双重故障)。但由于**嵌套异常 delivery 期间**引发的**异常**直接引发了 `VM-exit`，为了模拟 guest 产生的 `#DF` 异常，VMM 需要**注入一个硬件异常 DF 给 guest**，而**不是嵌套异常**。
+属于上面两类情况时，在正常情况下**这两个异常**会转化为一个 `#DF` 异常 (double fault，双重故障)。但由于**异常 delivery 期间**引发的**嵌套异常**直接引发了 `VM-exit`，为了模拟 guest 产生的 `#DF` 异常，VMM 需要**注入一个硬件异常 #DF 给 guest**，而**不是嵌套异常**。
 
 举例来说，guest 在执行中产生了`#SS` 异常，但这个`#SS` 异常**并不引发 VM-exit**，继而在这个`#SS` 异常的 **delivery 期间**遇到了一个`#GP` 异常而导致 **VM-exit**。此时 VMM 需要反射一个`#DF` 异常给 guest 处理，而**不是**`#GP` 异常。
 
-VMM 注入 DF 异常时，VM- entry interruption information 字段设置为：
+VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为：
 
-Bis7:0（向量号）为 8, 指示 DF 异常
+* `Bits 7:0`（**向量号**）为 8, 指示 `#DF` 异常
 
-Bits10:8（中断类型）为 3, 指示属于硬件异常
+* `Bits 10:8`（中断类型）为 3, 指示属于硬件异常
 
  Bit 1I (error code）为 1, 指示需要提供错误码
 
