--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -60,28 +60,9 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 `VM-entry interruption error code` 字段值设置为 0, 指示**错误码**为 0 值。
 
-另一情况是：guest 遇到异常但并不导致 VM-exit，继而在这个异常 delivery 期间引发了另一个嵌套异常，这个嵌套异常也不导致 Vm-exit。从而这两个异常被转化为#DF 异常，由于 exception bitmap 字段的 bit8 为 1 而导致 VM-exit
+另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
 
 此时，VM- exit interruption information 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM- exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 DF 让 guest 处
-
-3. 处理 triple fault
-
-下面的三种情况会产生 triple fault（异常属于前面所说的第 1 类或者第 2 类情况）:
-
- (1) 当 guest 遇到异常但并不导致 VM-exit，继而在这个异常 delivery 期间引发了另异常，这个异常也不导致 Vm-exit，从而这两个异常被转化为 DF 异常。#DF 异常也不导致 VM-exit，继而在#DF 异常的 delivery 期间再次引发了一个异常，最终转化为 triple  fault 而导致 VM-exit
-
- (2) VMM 注入一个硬件异常，在这个注入异常的 delivery 期间引发了一个异常，这个异常并不导致 VMexit，从而转化为#DF 异常。#DF 异常也不导致 VM-exi，继而在 #DF 异常的 delivery 期间再次引发了一个异常，最终转化为 triple fault 而导致 VM-exit
-
- (3) VMM 注入一个硬件异常#DF，在这个注入的 DF 异常 delivery 期间引发了一个异常，最终转化为 triple fault 而导致 VMexit
-
-由 triple fault 直接引发 MM-exit 时，VMM 不应该注入任何事件给 guest 执行。VMM 可以选择终止 guest 的运行，或者将 M 置为 shutdown 状态。当 VM 处于 shutdown 状态时，NMI、SMI 及 INT 事件能唤醒 shutdown 状态转为 active 状态（参见 4.173 节）
-
-4. 直接反射异常
-
-当异常由 guest 自身条件所引发时，在下面的情况下 VMM 可以直接反射异常给  guest 处理。
-
- (1) 由异常直接导致 Vm-exit 时，也就是 Idt-vectoring information 字段 bit31 为 0。
-......
 
 # 3. 处理 triple fault
 
