--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -38,6 +38,8 @@
 
 也就是下面两类情况，`#DF` 异常最终会被产生。
 
+注: 只有这两种情况, 才会将两个异常转换成一个`#DF`异常.
+
 第 1 类情况：
 
 * 遇到的异常（或者注入的硬件异常）是 `#DE`（向量号 0)、`#TS`（向量号 10)、`#NP`（向量号 11)、`#SS`（向量号 12) 或者`#GP`（向量号 13) **之一**
@@ -63,6 +65,8 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 `VM-entry interruption error code` 字段值设置为 0, 指示**错误码**为 0 值。
 
 另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
+
+注: 即这两个异常不属于上面的两种情况??? 为何会转换成 `#DF` ????
 
 此时，VM-exit interruption information 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM- exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 DF 让 guest 处
 
