--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -24,6 +24,8 @@
 
 如果**这个异常不直接！！！** 导致`VM-exit`, 也可能会在这个异常(或其他向量事件)的**delivery期间**遇到了**另一个错误**(包括**异常**、**triple fault**、**任务切换**、**EPT violation**、**EPT misconfiguration**或者访问**APIC-access page**)而**间接导致**`VM-exit`。
 
+注: 原始异常对应的exception bitmap没有置位所以不会 VM-exit ; 而嵌套异常(第二个异常)会发生`VM-exit`(要么是)
+
 # 2. VMM异常处理
 
 ## 2.1. 异常处理的原则
