--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -34,6 +34,8 @@
 
 当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 `IDT-vectoring information` 字段所记录的**硬件异常**（**中断类型！！！为硬件异常！！！**），但这个异常**并不直接导致** `VM-exit`，而在 **delivery 期间**遇到了表 7-1 中 `VM-exit  interruption information` 字段所记录的**嵌套异常**而导致 `Vm-exit`（另外参见 4.12.2 节）
 
+注: 是不是可以理解为: 原始异常不会
+
 注: `IDT-vectoring information` 和 `VM-exit  interruption information`两个的信息是发生Vm-exit**进入VMM后能看到的信息**.
 
 也就是下面两类情况，`#DF` 异常最终会被产生。
