--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
@@ -34,15 +34,15 @@
 
 # 2. 运行错误产生的异常
 
-由**运行代码错误产生的异常**是很常见的, 在**保护模式**下我们或许会常**与\#GP(General Protected)异常**或**与\#PF(Page Fault)异常**打交道
+由**运行代码错误产生的异常**是很常见的, 在**保护模式**下我们或许会常与`#GP`(**General Protected**)异常或与`#PF`(**Page Fault**)异常打交道
 
 下面情况下代码会产生运行错误.
 
-① 代码产生了**逻辑错误**: 典型地, 除0错误产生\#DE(Divide Error)异常
+① 代码产生了**逻辑错误**: 典型地, 除0错误产生`#DE`(Divide Error)异常
 
-② 处理器遇到**无法执行**的错误: 例如\#**UD(Invalid Opcode**)异常, 处理器遇到了不支持的指令, 它不可能得到执行
+② 处理器遇到**无法执行**的错误: 例如`#UD`(Invalid Opcode)异常, 处理器遇到了**不支持的指令**, 它不可能得到执行
 
-③ 代码违反了处理器的某些**保护措施**: 典型地, 如\#**GP异常**, \#**PF异常**, \#**SS异常**等. 这些措施是处理器为了某些管理机制而设置, 违反这些措施处理器将产生异常来提醒软件.
+③ 代码违反了处理器的某些**保护措施**: 典型地, 如`#GP`异常, `#PF`异常, `#SS`异常等. 这些措施是处理器为了某些管理机制而设置, 违反这些措施处理器将产生异常来提醒软件.
 
 后面将看到这些异常有些可以恢复,有些不行.
 
