--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -5,7 +5,7 @@
 
 - [1. 异常导致的vm-exit](#1-异常导致的vm-exit)
   - [1.1. exception bitmap为1的异常直接导致](#11-exception-bitmap为1的异常直接导致)
-  - [1.2. delivery期间的另一个错误间接导致](#12-delivery期间的另一个错误间接导致)
+  - [1.2. 异常delivery期间的另一个错误间接导致](#12-异常delivery期间的另一个错误间接导致)
 - [2. VMM异常处理](#2-vmm异常处理)
   - [2.1. 异常处理的原则](#21-异常处理的原则)
   - [2.2. Guest自身处理](#22-guest自身处理)
@@ -16,20 +16,33 @@
 
 # 1. 异常导致的vm-exit
 
+可产生异常的异常源来自:
+
+① **运行的代码产生了错误**, 从而引发异常产生
+
+② 由**软件主动引发的异常**
+
+③ **Machine\-Check(机器检查)引发的异常**
+
+异常是**不能被屏蔽的**, 无论是执行错误还是主动引发异常, 实质上是在**处理器内部引发**.
+
+这部分聊的是异常, 不是中断, 也不是其他错误, 关于异常和中断, 可以看体系结构部分知识
+
 ## 1.1. exception bitmap为1的异常直接导致
 
 当guest在运行过程中可能会遇到**某些错误**引发**异常**，而由于该**异常向量号**在`exception bitmap`字段中**对应的位为1**而导致 `vm-exit` .
 
-## 1.2. delivery期间的另一个错误间接导致
+## 1.2. 异常delivery期间的另一个错误间接导致
 
 如果**这个异常不直接！！！** 导致`VM-exit`, 也可能会在这个异常(或其他向量事件)的**delivery期间**遇到了**另一个错误**(包括**异常**、**triple fault**、**任务切换**、**EPT violation**、**EPT misconfiguration**或者访问**APIC-access page**)而**间接导致**`VM-exit`。
 
 注: 
 
-* 原始异常对应的exception bitmap没有置位所以不会 VM-exit ; 
-* 而另一个错误(**不一定是异常！！！**)会导致VM-exit, 比如
-  * exception bitmap对应位置位的异常导致VM-exit
-  * 
+* 原始异常对应的exception bitmap没有置位所以不会 VM-exit, 这个异常会进行正常delivery; 
+* 而另一个错误(**不一定是异常！！！**)本身会导致VM-exit, 比如下面等等.
+  * exception bitmap对应位置位的异常导致VM-exit, 如果这个异常的exception bitmap对应位没有置位则不会VM-exit
+  * EPT misconfiguration, 会发生VM-exit
+  * Task switch, 任务切换必定会VM-exit.
 
 # 2. VMM异常处理
 
