--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/2. Exception Source(异常源).md
@@ -50,9 +50,9 @@
 
 软件可以使用下面指令发起异常
 
-① **INT3指令**: 处理器遇到**INT3指令**(opcode码为0xCC)产生\#**BP(Breakpoint)断点异常！！！** 对应的向量号为3, 属于**trap类型**.
+① **INT3指令**: 处理器遇到**INT3指令**(opcode码为0xCC)产生`#BP`(Breakpoint)断点异常对应的向量号为3, 属于**trap类型**.
 
-② **INTO指令**: 软件执行**INTO指令**, 处理器检测到eflags寄存器的OF标志位置位时, 将产生\#OF(Overflow)**溢出异常！！！** 对应的向量号为4, 属于trap类型, **64位模式下该指令无效**.
+② **INTO指令**: 软件执行**INTO指令**, 处理器检测到eflags寄存器的OF标志位置位时, 将产生`#OF`(Overflow)**溢出异常！！！** 对应的向量号为4, 属于trap类型, **64位模式下该指令无效**.
 
 ③ **BOUND指令**: 软件执行BOUND指令, 处理器检测到**操作数越界**时将产生`#BR`(Bound Range)异常. **64位模式下指令无效**.
 
@@ -62,6 +62,8 @@
 
 # 5. 总结
 
-一般, 硬件异常是指**除了\#BP(INT3指令**)与\#**OF异常(INTO指令**)以外的**所有异常**, 它们属于**fault或abort类型异常**. 也包括由**BOUND指令产生的\#BR异常**及由**UD指令产生的\#UD异常**. 所有类型的\#DB异常(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**). 能**产生错误码**的**硬件异常**是: \#**DF, \#TS, \#NP, \#SS, \#GP, \#PF及\#AC这7类**.
+一般, 硬件异常是指**除了\#BP(INT3指令**)与\#**OF异常(INTO指令**)以外的**所有异常**, 它们属于**fault或abort类型异常**. 也包括由**BOUND指令产生的\#BR异常**及由**UD指令产生的\#UD异常**. 所有类型的\#DB异常(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**). 
+
+能**产生错误码**的**硬件异常**是: \#**DF, \#TS, \#NP, \#SS, \#GP, \#PF及\#AC这7类**.
 
 **软件异常**指由**NIT3与INTO指令**产生的\#BP与\#OF异常.
