--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -24,6 +24,8 @@
 
 在 guest 发生`VM-exit`后, 当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
+注: 原始异常delivery期间遇到错误(不一定是异常), 这个错误会导致VM-exit. 见上节说明.
+
 那么:
 * `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, 
 * `IDT-vectoring error code`字段记录**原始异常的错误码**.
@@ -32,15 +34,15 @@
 
 ![2020-08-02-20-57-33.png](./images/2020-08-02-20-57-33.png)
 
-当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 `IDT-vectoring information` 字段所记录的**硬件异常**（**中断类型！！！为硬件异常！！！**），但这个异常**并不直接导致** `VM-exit`，而在 **delivery 期间**遇到了表 7-1 中 `VM-exit  interruption information` 字段所记录的**嵌套异常**而导致 `Vm-exit`（另外参见 4.12.2 节）
+当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 `IDT-vectoring information` 字段所记录的**硬件异常**（**中断类型！！！为硬件异常！！！**），但这个异常**并不直接导致** `VM-exit`，而在 **delivery 期间**遇到了表 7-1 中 `VM-exit  interruption information` 字段所记录的**嵌套异常**而导致 `VM-exit`（另外参见 4.12.2 节）
 
-注: 是不是可以理解为: 原始异常不会
+注: 只有在这个嵌套异常的exception bitmap相应位置1时候, 才会发生VM-exit.
 
 注: `IDT-vectoring information` 和 `VM-exit  interruption information`两个的信息是发生Vm-exit**进入VMM后能看到的信息**.
 
 也就是下面两类情况，`#DF` 异常最终会被产生。
 
-注: 只有这两种情况, 才会将两个异常转换成一个`#DF`异常.
+注: 只有这两种情况, 才会将**两个异常**转换成一个`#DF`异常.
 
 第 1 类情况：
 
