--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -58,6 +58,8 @@
 
 举例来说，guest 在执行中产生了`#SS` 异常，但这个`#SS` 异常**并不引发 VM-exit**，继而在这个`#SS` 异常的 **delivery 期间**遇到了一个`#GP` 异常而导致 **VM-exit**。此时 VMM 需要反射一个`#DF` 异常给 guest 处理，而**不是**`#GP` 异常。
 
+注: 这个`#GP`异常在exception bitmap对应的位置为1才会导致Vm-exit, 而
+
 VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为：
 
 * `Bits 7:0`（**向量号**）为 8, 指示 `#DF` 异常
