--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -58,7 +58,7 @@
 
 举例来说，guest 在执行中产生了`#SS` 异常，但这个`#SS` 异常**并不引发 VM-exit**，继而在这个`#SS` 异常的 **delivery 期间**遇到了一个`#GP` 异常而导致 **VM-exit**。此时 VMM 需要反射一个`#DF` 异常给 guest 处理，而**不是**`#GP` 异常。
 
-注: 这个`#GP`异常在exception bitmap对应的位置为1才会导致Vm-exit, 而
+>注: 这个`#GP`异常在exception bitmap对应的位置为1才会导致Vm-exit, 而这种情况符合上面的两类情况, 所以注入时候需要注入`#DF`, 而不是`#GP`
 
 VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为：
 
@@ -72,19 +72,19 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
 
-注: 即这两个异常不属于上面的两种情况??? 为何会转换成 `#DF` ????
+注: 即这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？
 
-此时，VM-exit interruption information 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM- exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 DF 让 guest 处
+此时，VM-exit interruption information 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理
 
 # 3. 处理 triple fault
 
 下面的三种情况会产生**triple fault**(异常属于前面所说的第1类或者第2类情况):
 
-(1) 当 guest 遇到**异常**但并**不导致**`VM-exit`, 继而在这个**异常delivery期间**引发了**另一个异常**，这个异常也不导致VM-exit,从而这两个异常被转化为#DF异常。#DF异常也不导致VM-exit,继而在#DF异常的delivery期间再次引发了-一个异常，最终转化为triplefault而导致VM-exit。
+(1) 当 guest 遇到**异常**但并**不导致**`VM-exit`, 继而在这个**异常delivery期间**引发了**另一个异常**，这个异常也不导致VM-exit,从而这两个异常被转化为`#DF`异常。`#DF`异常也不导致VM-exit,继而在`#DF`异常的delivery期间再次引发了-一个异常，最终转化为triplefault而导致VM-exit。
 
-(2) VMM注入一个**硬件异常**，在这个注人异常的delivery 期间引发了一 个异常，这个异常并不导致VM-exit, 从而转化为#DF异常。#DF异常也不导致VM-exit, 继而在#DF异常的delivery期间再次引发了-一个异常，最终转化为triple fault而导致VM-exit。
+(2) VMM注入一个**硬件异常**，在这个注人异常的delivery 期间引发了一 个异常，这个异常并不导致VM-exit, 从而转化为`#DF`异常。`#DF`异常也不导致VM-exit, 继而在`#DF`异常的delivery期间再次引发了-一个异常，最终转化为triple fault而导致VM-exit。
 
-(3) VMM注人一个硬件异常#DF,在这个注人的#DF异常delivery 期间引发了一 一个异常，最终转化为triple fault而导致VM-exit。
+(3) VMM注人一个硬件异常`#DF`,在这个注人的`#DF`异常delivery 期间引发了一 一个异常，最终转化为triple fault而导致VM-exit。
 
 由triple fault 直接引发VM-exit时，VMM不应该注人任何事件给guest执行。VMM可以选择终止guest的运行，或者将VM置为shutdown状态。当VM处于shutdown状态时，NMI、SMI及INIT事件能唤醒shutdown状态转为active状态(参见4.17.3节)
 
@@ -94,8 +94,8 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 (1)由异常直接导致`VM-exit`时， 也就是`IDT-vectoring information`字段`bit 31`**为0**。
 
-(2)不属于表7-1中的第1类和第2类情况时(不产生#DF异常)，由于向量事件delivery期间遇到一 个异常而导致VM-exit。
+(2)不属于表7-1中的第1类和第2类情况时(不产生`#DF`异常)，由于向量事件delivery期间遇到一 个异常而导致VM-exit。
 
-例如，guest 运行过程中引发了#GP异常，#GP 异常不导致VM-xit。但在#GP异常delivery期间遇到了#PF异常而导致VM-exit。 这种情况下并不会产生#DF异常，VMM需要直接将#PF异常反射给guest处理。
+例如，guest 运行过程中引发了#GP异常，#GP 异常不导致VM-xit。但在#GP异常delivery期间遇到了#PF异常而导致VM-exit。 这种情况下并不会产生`#DF`异常，VMM需要直接将#PF异常反射给guest处理。
 
 VMM 可以直接将 VM-exit interruption information 字段的值赋值给 `VM-entryinterruption information` 字段, 将 `VM-exit interruption error code` 字段的值直接赋给 `VM-entry interruption error code` 字段(存在错误码时), 通过事件注入反射给 guest 处理.
