--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -80,7 +80,7 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 下面的三种情况会产生**triple fault**(异常属于前面所说的第1类或者第2类情况):
 
-(1) 当 guest 遇到**异常**但并**不导致**`VM-exit`, 继而在这个**异常delivery期间**引发了**另一个异常**，这个异常也不导致VM-exit,从而这两个异常被转化为`#DF`异常。`#DF`异常也不导致VM-exit,继而在`#DF`异常的delivery期间再次引发了-一个异常，最终转化为triplefault而导致VM-exit。
+(1) 当 guest 遇到**异常**但并**不导致**`VM-exit`, 继而在这个**异常delivery期间**引发了**另一个异常**，这个异常**也不导致VM-exit**,从而**这两个异常**被转化为`#DF`异常。`#DF`异常也不导致VM-exit,继而在`#DF`异常的delivery期间再次引发了-一个异常，最终转化为triplefault而导致VM-exit。
 
 (2) VMM注入一个**硬件异常**，在这个注人异常的delivery 期间引发了一 个异常，这个异常并不导致VM-exit, 从而转化为`#DF`异常。`#DF`异常也不导致VM-exit, 继而在`#DF`异常的delivery期间再次引发了-一个异常，最终转化为triple fault而导致VM-exit。
 
