--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -72,9 +72,12 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
 
-注: 即这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？是不是意味着只要
+注: 即这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？也就是说只要虚拟机属于上面两种异常嵌套的情况, 都会转换成`DF`, 只是说
+- 如果
 
-此时，VM-exit interruption information 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理
+此时，VM-exit interruption information 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理.
+
+注: 这时候的`IDT-vectoring information` 和 `VM-exit interruption information`不会记录那两个异常, 而只是在`VM-exit interruption information`记录`DF`
 
 # 3. 处理 triple fault
 
