--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -54,7 +54,11 @@
 * 遇到的异常（或者注入的硬件异常）是 `#PF`（向量号 14)。
 * 异常 delivery 期间遇到了 `#PF`（向量号 14)、`#DE`（向量号 0)、`#TS`（向量号 10)、`#NP`（向量号 11)、`#SS`（向量号 12) 或者`#GP`（向量号 13) 之一
 
-属于上面两类情况时，在正常情况下**这两个异常**会转化为一个 `#DF` 异常 (double fault，双重故障)。但由于**异常 delivery 期间**引发的**嵌套异常**直接引发了 `VM-exit`，为了模拟 guest 产生的 `#DF` 异常，VMM 需要**注入一个硬件异常 #DF 给 guest**，而**不是嵌套异常**。
+属于上面两类情况时，在正常情况下**这两个异常**会转化为一个 `#DF` 异常 (double fault，双重故障)。
+
+注: **并未要求一定要发生VM-exit！！！**
+
+但如果由于**异常 delivery 期间**引发的**嵌套异常**直接引发了 `VM-exit`，为了模拟 guest 产生的 `#DF` 异常，VMM 需要**注入一个硬件异常 #DF 给 guest**，而**不是嵌套异常！！！**。
 
 举例来说，guest 在执行中产生了`#SS` 异常，但这个`#SS` 异常**并不引发 VM-exit**，继而在这个`#SS` 异常的 **delivery 期间**遇到了一个`#GP` 异常而导致 **VM-exit**。此时 VMM 需要反射一个`#DF` 异常给 guest 处理，而**不是**`#GP` 异常。
 
@@ -72,10 +76,10 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
 
-注: 即这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？也就是说只要虚拟机属于上面两种异常嵌套的情况, 都会转换成`DF`, 只是说
-- 如果嵌套异常(第二个异常)会导致`VM-exit`, 这样在VMM会看到`IDT-vectoring information` 和 `VM-exit interruption information`记录了那两个异常
+此时，`VM-exit interruption information` 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理.
 
-此时，VM-exit interruption information 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理.
+注: 即这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？也就是说只要虚拟机属于上面异常嵌套的两种情况, 都会转换成`DF`, 只是说
+- 如果嵌套异常(第二个异常)会导致`VM-exit`, 这样在VMM会看到`IDT-vectoring information`记录第一个异常 和 `VM-exit interruption information`记录那个嵌套异常, 这个
 
 注: 这时候的`IDT-vectoring information` 和 `VM-exit interruption information`不会记录那两个异常, 而只是在`VM-exit interruption information`记录`DF`
 
