--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -22,19 +22,27 @@
 
 # 2. 反射`#DF`异常: 异常嵌套
 
-在 guest 发生`VM-exit`后, 当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
-注: 原始异常delivery期间遇到错误(不一定是异常), 这个错误会导致VM-exit. 见上节说明.
+##
 
-那么:
+1. `IDT-vectoring information` 字段的`bit 31` (valid位) 为1表明是这个字段异常向量delivery期间发生了另外一个错误(不一定是异常), 而这个异常导致了`VM-exit`
+
+
+在 guest 发生`VM-exit`后, 当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的**向量事件**并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
+
+那么这时候:
 * `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, 
 * `IDT-vectoring error code`字段记录**原始异常的错误码**.
+
+注: 虚拟机原始异常delivery期间遇到错误(不一定是异常), 而这个错误会导致VM-exit. 见上节说明. 这个时候能确定上面两个字段, 如果delivery期间发生的不是异常的话, 不会有`VM-exit interruption information`信息.
+
+## 
 
 在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常**给guest**.
 
 ![2020-08-02-20-57-33.png](./images/2020-08-02-20-57-33.png)
 
-当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 `IDT-vectoring information` 字段所记录的**硬件异常**（**中断类型！！！为硬件异常！！！**），但这个异常**并不直接导致** `VM-exit`，而在 **delivery 期间**遇到了表 7-1 中 `VM-exit  interruption information` 字段所记录的**嵌套异常**而导致 `VM-exit`（另外参见 4.12.2 节）
+当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 `IDT-vectoring information` 字段所记录的**硬件异常**（**中断类型！！！为硬件异常！！！**），但这个异常**并不直接导致** `VM-exit`，而在 **delivery 期间**遇到了表 7-1 中 `VM-exit interruption information` 字段所记录的**嵌套异常**而导致 `VM-exit`（另外参见 4.12.2 节）
 
 注: 只有在这个嵌套异常的exception bitmap相应位置1时候, 才会发生VM-exit.
 
@@ -76,8 +84,12 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
 
-此时，`VM-exit interruption information` 字段记录的值为 800008H，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理.
+此时，`VM-exit interruption information` 字段记录的值为 `800008H`，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理.
 
+小结
+
+
+2. 
 注: 即这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？也就是说只要虚拟机属于上面异常嵌套的两种情况, 都会转换成`DF`, 只是说
 - 如果嵌套异常(第二个异常)会导致`VM-exit`, 这样在VMM会看到`IDT-vectoring information`记录第一个异常 和 `VM-exit interruption information`记录那个嵌套异常, 这个
 
