--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -4,8 +4,9 @@
 <!-- code_chunk_output -->
 
 - [1. 异常导致的vm-exit](#1-异常导致的vm-exit)
-  - [1.1. exception bitmap为1的异常直接导致](#11-exception-bitmap为1的异常直接导致)
-  - [1.2. 异常delivery期间的另一个错误间接导致](#12-异常delivery期间的另一个错误间接导致)
+  - [1.1. 异常](#11-异常)
+  - [1.2. exception bitmap为1的异常直接导致](#12-exception-bitmap为1的异常直接导致)
+  - [1.3. 异常delivery期间的另一个错误间接导致](#13-异常delivery期间的另一个错误间接导致)
 - [2. VMM异常处理](#2-vmm异常处理)
   - [2.1. 异常处理的原则](#21-异常处理的原则)
   - [2.2. Guest自身处理](#22-guest自身处理)
@@ -15,6 +16,8 @@
 <!-- /code_chunk_output -->
 
 # 1. 异常导致的vm-exit
+
+## 1.1. 异常
 
 可产生异常的异常源来自:
 
@@ -26,13 +29,22 @@
 
 异常是**不能被屏蔽的**, 无论是执行错误还是主动引发异常, 实质上是在**处理器内部引发**.
 
+
+
+一般, 硬件异常是指**除了\#BP(INT3指令**)与\#**OF异常(INTO指令**)以外的**所有异常**, 它们属于**fault或abort类型异常**. 也包括由**BOUND指令产生的\#BR异常**及由**UD指令产生的\#UD异常**. 所有类型的\#DB异常(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**). 
+
+能**产生错误码**的**硬件异常**是: \#**DF, \#TS, \#NP, \#SS, \#GP, \#PF及\#AC这7类**.
+
+**软件异常**指由**NIT3与INTO指令**产生的\#BP与\#OF异常.
+
+
 这部分聊的是异常, 不是中断, 也不是其他错误, 关于异常和中断, 可以看体系结构部分知识
 
-## 1.1. exception bitmap为1的异常直接导致
+## 1.2. exception bitmap为1的异常直接导致
 
 当guest在运行过程中可能会遇到**某些错误**引发**异常**，而由于该**异常向量号**在`exception bitmap`字段中**对应的位为1**而导致 `vm-exit` .
 
-## 1.2. 异常delivery期间的另一个错误间接导致
+## 1.3. 异常delivery期间的另一个错误间接导致
 
 如果**这个异常不直接！！！** 导致`VM-exit`, 也可能会在这个异常(或其他向量事件)的**delivery期间**遇到了**另一个错误**(包括**异常**、**triple fault**、**任务切换**、**EPT violation**、**EPT misconfiguration**或者访问**APIC-access page**)而**间接导致**`VM-exit`。
 
