--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -29,13 +29,15 @@
 
 异常是**不能被屏蔽的**, 无论是执行错误还是主动引发异常, 实质上是在**处理器内部引发**.
 
+异常包括硬件异常和软件异常.
 
+* 一般, 硬件异常是指**除了**`#BP`(**INT3指令**)与`#OF`异常(**INTO指令**)以外的**所有异常**
 
-一般, 硬件异常是指**除了\#BP(INT3指令**)与\#**OF异常(INTO指令**)以外的**所有异常**, 它们属于**fault或abort类型异常**. 也包括由**BOUND指令产生的\#BR异常**及由**UD指令产生的\#UD异常**. 所有类型的\#DB异常(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**). 
+它们属于**fault或abort类型异常**. 也包括由**BOUND指令**产生的`#BR`异常及由**UD指令**产生的`#UD`异常. 所有类型的`#DB异常`(也包括了trap类型)也属于硬件异常. **硬件异常的向量号必须是0\~31(！！！**). 
 
-能**产生错误码**的**硬件异常**是: \#**DF, \#TS, \#NP, \#SS, \#GP, \#PF及\#AC这7类**.
+能**产生错误码**的**硬件异常**是: `#DF`, `#TS`, `#NP`, `#SS`, `#GP`, `#PF`及`#AC`这7类.
 
-**软件异常**指由**NIT3与INTO指令**产生的\#BP与\#OF异常.
+* **软件异常**指由**NIT3与INTO指令**产生的`#BP`与`#OF`异常.
 
 
 这部分聊的是异常, 不是中断, 也不是其他错误, 关于异常和中断, 可以看体系结构部分知识
