--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -25,8 +25,7 @@
 
 ##
 
-1. `IDT-vectoring information` 字段的`bit 31` (valid位) 为1表明是这个字段异常向量delivery期间发生了另外一个错误(不一定是异常), 而这个异常导致了`VM-exit`
-
+小结: `IDT-vectoring information` 字段的`bit 31` (valid位) 为1表明是这个字段异常向量delivery期间发生了另外一个错误(不一定是异常), 而这个错误导致了`VM-exit`
 
 在 guest 发生`VM-exit`后, 当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的**向量事件**并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
@@ -37,6 +36,8 @@
 注: 虚拟机原始异常delivery期间遇到错误(不一定是异常), 而这个错误会导致VM-exit. 见上节说明. 这个时候能确定上面两个字段, 如果delivery期间发生的不是异常的话, 不会有`VM-exit interruption information`信息.
 
 ## 
+
+小结: `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时, 同时符合下面说的两种类型情况, 则VMM需要反射一个`DF`异常
 
 在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常**给guest**.
 
@@ -64,7 +65,7 @@
 
 属于上面两类情况时，在正常情况下**这两个异常**会转化为一个 `#DF` 异常 (double fault，双重故障)。
 
-注: **并未要求一定要发生VM-exit！！！**
+注: **并未要求一定要发生VM-exit！！！**, 只有当第二个异常对应的exception bitmap位为1才会发生VM-exit
 
 但如果由于**异常 delivery 期间**引发的**嵌套异常**直接引发了 `VM-exit`，为了模拟 guest 产生的 `#DF` 异常，VMM 需要**注入一个硬件异常 #DF 给 guest**，而**不是嵌套异常！！！**。
 
@@ -82,18 +83,18 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 `VM-entry interruption error code` 字段值设置为 0, 指示**错误码**为 0 值。
 
-另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
+## 
 
-此时，`VM-exit interruption information` 字段记录的值为 `800008H`，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理.
+`IDT-vectoring information` 字段的`bit 31` (valid位) 为0
 
-小结
-
-
-2. 
-注: 即这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？也就是说只要虚拟机属于上面异常嵌套的两种情况, 都会转换成`DF`, 只是说
+小结: 这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？也就是说只要虚拟机属于上面异常嵌套的两种情况, 都会转换成`DF`, 只是说
 - 如果嵌套异常(第二个异常)会导致`VM-exit`, 这样在VMM会看到`IDT-vectoring information`记录第一个异常 和 `VM-exit interruption information`记录那个嵌套异常, 这个
 
 注: 这时候的`IDT-vectoring information` 和 `VM-exit interruption information`不会记录那两个异常, 而只是在`VM-exit interruption information`记录`DF`
+
+另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
+
+此时，`VM-exit interruption information` 字段记录的值为 `800008H`，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理.
 
 # 3. 处理 triple fault
 
