--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/0. 概述.md
@@ -53,7 +53,7 @@
 注: 
 
 * 原始异常对应的exception bitmap没有置位所以不会 VM-exit, 这个异常会进行正常delivery; 
-* 而另一个错误(**不一定是异常！！！**)本身会导致VM-exit, 比如下面等等.
+* 而另一个错误(**不一定是异常！！！**)本身会导致VM-exit, 比如下面等等(见3.10.3).
   * exception bitmap对应位置位的异常导致VM-exit, 如果这个异常的exception bitmap对应位没有置位则不会VM-exit
   * EPT misconfiguration, 会发生VM-exit
   * Task switch, 任务切换必定会VM-exit.
