--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -25,7 +25,7 @@
 
 ##
 
-小结: `IDT-vectoring information` 字段的`bit 31` (valid位) 为1表明是这个字段异常向量delivery期间发生了另外一个错误(不一定是异常), 而这个错误导致了`VM-exit`
+小结: 当Guest在一个异常向量delivery期间发生了另外一个错误A(不一定是异常), 而这个错误A导致了`VM-exit`. 这时, VMM会看到`IDT-vectoring information` 字段的`bit 31` (valid位) 为1
 
 在 guest 发生`VM-exit`后, 当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的**向量事件**并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
@@ -37,7 +37,10 @@
 
 ## 
 
-小结: `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时, 同时符合下面说的两种类型情况, 则VMM需要反射一个`DF`异常
+小结: 当Guest在一个异常向量A的delivery期间发生了另外一个异常B(一定是异常), A和B符合下面表描述的, 同时异常B导致了`VM-exit`(exception bitmap相应位为1时). 当同时满足, 
+* VMM会看到`IDT-vectoring information` 字段的`bit 31` (valid位) 为1时
+* VMM看到`IDT-vectoring information`和`IDT-vectoring error code`记录异常A信息
+* VMM看到`VM-exit interruption information`   同时符合下面说的两种类型情况, 则VMM需要反射一个`DF`异常
 
 在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常**给guest**.
 
