--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -33,14 +33,14 @@
 * `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, 
 * `IDT-vectoring error code`字段记录**原始异常的错误码**.
 
-注: 虚拟机原始异常delivery期间遇到错误(不一定是异常), 而这个错误会导致VM-exit. 见上节说明. 这个时候能确定上面两个字段, 如果delivery期间发生的不是异常的话, 不会有`VM-exit interruption information`信息.
+注: 虚拟机原始异常delivery期间遇到错误(不一定是异常), 而这个错误会导致VM-exit. 见3.10说明. 这个时候能确定上面两个字段, 只有delivery期间发生的是外部中断、NMI、硬件异常以及软件异常, 才会有`VM-exit interruption information`和`VM-exit interruption error code`信息.
 
 ## 
 
-小结: 当Guest在一个异常向量A的delivery期间发生了另外一个异常B(一定是异常), A和B符合下面表描述的, 同时异常B导致了`VM-exit`(exception bitmap相应位为1时). 当同时满足, 
+小结: 当Guest在一个异常向量A的delivery期间发生了另外一个异常B(一定是异常), 同时异常B直接导致了`VM-exit`(exception bitmap相应位为1时). 当同时满足, 
 * VMM会看到`IDT-vectoring information` 字段的`bit 31` (valid位) 为1时
-* VMM看到`IDT-vectoring information`和`IDT-vectoring error code`记录异常A信息
-* VMM看到`VM-exit interruption information`   同时符合下面说的两种类型情况, 则VMM需要反射一个`DF`异常
+* VMM看到`IDT-vectoring information`和`IDT-vectoring error code`记录异常A信息, 间接向量事件类信息字段, 因为异常A不直接导致VM-exit.
+* VMM看到`VM-exit interruption information`和`VM-exit interruption error code`记录异常B信息, 直接向量事件类信息字段, 因为异常B直接导致了`VM-exit`   同时符合下面说的两种类型情况, 则VMM需要反射一个`DF`异常
 
 在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常**给guest**.
 
