--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -23,9 +23,19 @@
 # 2. 反射`#DF`异常: 异常嵌套
 
 
-##
+小结: 当Guest在一个异常向量A的delivery期间(可能是由中断导致的)发生了另外一个错误B(不一定是异常), 如果
+1. 错误B导致了`VM-exit`.
+* VMM会看到`IDT-vectoring information` 字段的`bit 31` (valid位) 为1, 
+* VMM看到`IDT-vectoring information`和`IDT-vectoring error code`记录异常A信息, **间接向量事件类信息字段**, 因为异常A不直接导致VM-exit.
+* 当错误B属于**外部中断**、**NMI**、**硬件异常**或者**软件异常**, VMM才会看到`VM-exit interruption information`和`VM-exit interruption error code`记录异常B信息, 直接向量事件类信息字段, 因为错误B直接导致了`VM-exit`
+* 当A和错误B都属于异常且符合下面两类情况, 
 
-小结: 当Guest在一个异常向量delivery期间发生了另外一个错误A(不一定是异常), 而这个错误A导致了`VM-exit`. 这时, VMM会看到`IDT-vectoring information` 字段的`bit 31` (valid位) 为1
+
+异常B直接导致了`VM-exit`(exception bitmap相应位为1时). 当同时满足, 
+
+* VMM看到`VM-exit interruption information`和`VM-exit interruption error code`,    同时符合下面说的两种类型情况, 则VMM需要反射一个`DF`异常
+
+##
 
 在 guest 发生`VM-exit`后, 当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的**向量事件**并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
@@ -33,14 +43,10 @@
 * `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, 
 * `IDT-vectoring error code`字段记录**原始异常的错误码**.
 
-注: 虚拟机原始异常delivery期间遇到错误(不一定是异常), 而这个错误会导致VM-exit. 见3.10说明. 这个时候能确定上面两个字段, 只有delivery期间发生的是外部中断、NMI、硬件异常以及软件异常, 才会有`VM-exit interruption information`和`VM-exit interruption error code`信息.
+注: 虚拟机原始异常delivery期间遇到错误(不一定是异常), 而这个错误会导致VM-exit. 见3.10说明. 这个时候能确定上面两个字段, 只有delivery期间发生的是**外部中断**、**NMI**、**硬件异常**以及**软件异常**, 才会有`VM-exit interruption information`和`VM-exit interruption error code`信息.
 
 ## 
 
-小结: 当Guest在一个异常向量A的delivery期间发生了另外一个异常B(一定是异常), 同时异常B直接导致了`VM-exit`(exception bitmap相应位为1时). 当同时满足, 
-* VMM会看到`IDT-vectoring information` 字段的`bit 31` (valid位) 为1时
-* VMM看到`IDT-vectoring information`和`IDT-vectoring error code`记录异常A信息, 间接向量事件类信息字段, 因为异常A不直接导致VM-exit.
-* VMM看到`VM-exit interruption information`和`VM-exit interruption error code`记录异常B信息, 直接向量事件类信息字段, 因为异常B直接导致了`VM-exit`   同时符合下面说的两种类型情况, 则VMM需要反射一个`DF`异常
 
 在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常**给guest**.
 
